--- a/SistemaCadastroContatos/appsettings.json
+++ b/SistemaCadastroContatos/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DataBase": "Server=localhost\\SQLEXPRESS2022;Database=SistemaContatos;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
